--- a/index.html
+++ b/index.html
@@ -22,60 +22,65 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+            <span class="moves">0</span> Moves
+            <time class="timer">00:00:00</time> 
 
-            <div class="restart">
+            <div class="restart" id="restart">
         		<i class="fa fa-repeat"></i>
-        	</div>
-        </section>
+            </div>
 
+        </section>
+        <div class="alert" id="won">
+            <strong>Congrats!</strong> You have won! Press reset if you want to play again
+          </div>
+    
         <ul class="deck">
-            <li class="card">
+            <li class="card" type="diamond">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="plane">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card match">
+            <li class="card "  type="anchor">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="bolt">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="cube">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card match">
+            <li class="card "  type="anchor">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="leaf">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="bicycle">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="diamond">
                 <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
+            </li>x
+            <li class="card"  type="bomb">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="leaf">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="bomb">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card open show">
+            <li class="card "  type="bolt">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="bicycle">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="plane">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card">
+            <li class="card"  type="cube">
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
